feat: add user API credentials
